# routes/courses.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const router = express.Router();
+const validation = require('../middleware/validate');
 
 const coursesController = require('../controllers/courses');
 
@@ -7,6 +8,10 @@ router.get('/', coursesController.getCourses);
 
 router.get('/:courseId', coursesController.getCourse);
 
-router.post('/', coursesController.createCourse);
+router.post('/', validation.saveCourse, coursesController.createCourse);
+
+router.put('/:courseId', validation.saveCourse, coursesController.updateCourse);
+
+router.delete('/:courseId', coursesController.deleteCourse);
 
 module.exports = router;
